# Webify

./: .gitmodules  CMakeLists.txt  Converter.cpp  Converter.h  README.md  SizeRow.h  Utils.cpp  Utils.h  main.cpp  main1.cpp
icons/: file.tiff  folder.tiff
